[package]
name = "wrp-cte-rs"
version = "0.2.0"
edition = "2021"
authors = ["IOWarp Team"]
description = "Rust bindings for IOWarp Context Transfer Engine"
license = "BSD-3-Clause"
repository = "https://github.com/iowarp/clio-core"

[lib]
name = "wrp_cte"
crate-type = ["cdylib", "rlib"]

[features]
default = ["async"]
sync = []
async = ["sync", "dep:tokio"]

[dependencies]
cxx = "1.0"
tokio = { version = "1.50", optional = true, default-features = false, features = ["rt", "signal", "time", "sync"] }

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }

[[example]]
name = "blob_monitor"
path = "examples/blob_monitor.rs"

[[bin]]
name = "aneris-profiler"
path = "src/bin/aneris/main.rs"

[[bin]]
name = "aneris-rescorer"
path = "src/bin/aneris-rescorer/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(aneris_build_dir)'] }